searchConnections will search for both direct and indirect